; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_StackPop_b.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_ScriptRunner_b.c_Script_StackPop_b.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@script_stack_ptr = common dso_local global i64 0, align 8
@script_stack = common dso_local global i32* null, align 8
@script_ptr = common dso_local global i32 0, align 4
@script_start_stack = common dso_local global i32* null, align 8
@script_start_ptr = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@script_continue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Script_StackPop_b() #0 {
  %1 = load i64, i64* @script_stack_ptr, align 8
  %2 = add i64 %1, -1
  store i64 %2, i64* @script_stack_ptr, align 8
  %3 = load i32*, i32** @script_stack, align 8
  %4 = load i64, i64* @script_stack_ptr, align 8
  %5 = getelementptr inbounds i32, i32* %3, i64 %4
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* @script_ptr, align 4
  %7 = load i32*, i32** @script_start_stack, align 8
  %8 = load i64, i64* @script_stack_ptr, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* @script_start_ptr, align 4
  %11 = load i32, i32* @TRUE, align 4
  store i32 %11, i32* @script_continue, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
